--- a/festivalsofindia.html
+++ b/festivalsofindia.html
@@ -43,14 +43,14 @@
 <div class="container mx-auto px-4 sm:px-6 lg:px-8">
 <div class="flex items-center justify-between h-20 border-b border-primary/20 dark:border-primary/30">
 <div class="flex items-center gap-3">
-<img src="Logo.png" alt="Description" class="h-14 w-14" />
+<img src="Images/Logo.png" alt="Description" class="h-14 w-14" />
 <path clip-rule="evenodd" d="M24 18.4228L42 11.475V34.3663C42 34.7796 41.7457 35.1504 41.3601 35.2992L24 42V18.4228Z" fill="currentColor" fill-rule="evenodd"></path>
 <path clip-rule="evenodd" d="M24 8.18819L33.4123 11.574L24 15.2071L14.5877 11.574L24 8.18819ZM9 15.8487L21 20.4805V37.6263L9 32.9945V15.8487ZM27 37.6263V20.4805L39 15.8487V32.9945L27 37.6263ZM25.354 2.29885C24.4788 1.98402 23.5212 1.98402 22.646 2.29885L4.98454 8.65208C3.7939 9.08038 3 10.2097 3 11.475V34.3663C3 36.0196 4.01719 37.5026 5.55962 38.098L22.9197 44.7987C23.6149 45.0671 24.3851 45.0671 25.0803 44.7987L42.4404 38.098C43.9828 37.5026 45 36.0196 45 34.3663V11.475C45 10.2097 44.2061 9.08038 43.0155 8.65208L25.354 2.29885Z" fill="currentColor" fill-rule="evenodd"></path>
 </svg>
 <h1 class="text-2xl font-bold text-stone-900 dark:text-white">Dharohar</h1>
 </div>
 <nav class="hidden md:flex items-center gap-8">
-<a class="text-base font-medium hover:text-primary transition-colors" href="home.html">Home</a>
+<a class="text-base font-medium hover:text-primary transition-colors" href="index.html">Home</a>
 <a class="text-base font-medium hover:text-primary transition-colors" href="museumpage.html">Museum</a>
 <a class="text-base font-medium hover:text-primary transition-colors" href="map.html">Map</a>
 <a class="text-base font-medium hover:text-primary transition-colors" href="stories.html">Stories</a>
@@ -103,7 +103,7 @@
 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
 <div class="bg-white dark:bg-background-dark rounded-xl shadow-lg overflow-hidden group border border-stone-200 dark:border-stone-800">
 <div class="relative">
-<img alt="Diwali" class="h-64 w-full object-cover group-hover:scale-105 transition-transform duration-500" src="diwali.webp"/>
+<img alt="Diwali" class="h-64 w-full object-cover group-hover:scale-105 transition-transform duration-500" src="Images/diwali.webp"/>
 <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
 <button class="absolute top-4 right-4 bg-white/20 p-2 rounded-full text-white hover:bg-white/30 transition-colors">
 <span class="material-symbols-outlined">play_arrow</span>
@@ -120,7 +120,7 @@
 </div>
 <div class="bg-white dark:bg-background-dark rounded-xl shadow-lg overflow-hidden group border border-stone-200 dark:border-stone-800">
 <div class="relative">
-<img alt="Holi" class="h-64 w-full object-cover group-hover:scale-105 transition-transform duration-500" src="holi.webp"/>
+<img alt="Holi" class="h-64 w-full object-cover group-hover:scale-105 transition-transform duration-500" src="Images/holi.webp"/>
 <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
 <button class="absolute top-4 right-4 bg-white/20 p-2 rounded-full text-white hover:bg-white/30 transition-colors">
 <span class="material-symbols-outlined">volume_up</span>
@@ -137,7 +137,7 @@
 </div>
 <div class="bg-white dark:bg-background-dark rounded-xl shadow-lg overflow-hidden group border border-stone-200 dark:border-stone-800">
 <div class="relative">
-<img alt="Durga Puja" class="h-64 w-full object-cover group-hover:scale-105 transition-transform duration-500" src="durgapooja.webp"/>
+<img alt="Durga Puja" class="h-64 w-full object-cover group-hover:scale-105 transition-transform duration-500" src="Images/durgapooja.webp"/>
 <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
 <div class="absolute bottom-0 left-0 p-4">
 <h4 class="text-xl font-bold text-white">Durga Puja</h4>
@@ -151,7 +151,7 @@
 </div>
 <div class="bg-white dark:bg-background-dark rounded-xl shadow-lg overflow-hidden group border border-stone-200 dark:border-stone-800">
 <div class="relative">
-<img alt="Onam" class="h-64 w-full object-cover group-hover:scale-105 transition-transform duration-500" src="onam.webp"/>
+<img alt="Onam" class="h-64 w-full object-cover group-hover:scale-105 transition-transform duration-500" src="Images/onam.webp"/>
 <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
 <div class="absolute bottom-0 left-0 p-4">
 <h4 class="text-xl font-bold text-white">Onam</h4>
