--- a/museumpage.html
+++ b/museumpage.html
@@ -80,7 +80,7 @@
       <div class="container mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex items-center justify-between h-20 border-b border-primary/20 dark:border-primary/30">
           <div class="flex items-center gap-3">
-            <img src="Logo.png" alt="Description" class="h-14 w-14" />
+            <img src="Images/Logo.png" alt="Description" class="h-14 w-14" />
             <path clip-rule="evenodd"
               d="M24 18.4228L42 11.475V34.3663C42 34.7796 41.7457 35.1504 41.3601 35.2992L24 42V18.4228Z"
               fill="currentColor" fill-rule="evenodd"></path>
@@ -91,7 +91,7 @@
             <h1 class="text-2xl font-bold text-stone-900 dark:text-white">Dharohar</h1>
           </div>
           <nav class="hidden md:flex items-center gap-8">
-            <a class="text-base font-medium hover:text-primary transition-colors" href="home.html">Home</a>
+            <a class="text-base font-medium hover:text-primary transition-colors" href="index.html">Home</a>
             <a class="text-base font-medium hover:text-primary transition-colors" href="museumpage.html">Museum</a>
             <a class="text-base font-medium hover:text-primary transition-colors" href="map.html">Map</a>
             <a class="text-base font-medium hover:text-primary transition-colors" href="stories.html">Stories</a>
@@ -129,7 +129,7 @@
             Virtual Galleries</h3>
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
             <div class="bg-white dark:bg-secondary rounded-xl shadow-lg overflow-hidden group">
-              <div class="h-64 bg-cover bg-center" style="background-image: url('architecture.jpg');"></div>
+              <div class="h-64 bg-cover bg-center" style="background-image: url('Images/architecture.jpg');"></div>
               <div class="p-6">
                 <h4 class="text-xl font-bold font-display text-stone-900 dark:text-white">Architecture</h4>
                 <p class="mt-2 text-base text-stone-600 dark:text-stone-400 font-body">Journey through centuries of
@@ -140,7 +140,7 @@
               </div>
             </div>
             <div class="bg-white dark:bg-secondary rounded-xl shadow-lg overflow-hidden group">
-              <div class="h-64 bg-cover bg-center" style="background-image: url('sculpture.webp');"></div>
+              <div class="h-64 bg-cover bg-center" style="background-image: url('Images/sculpture.webp');"></div>
               <div class="p-6">
                 <h4 class="text-xl font-bold font-display text-stone-900 dark:text-white">Sculptures</h4>
                 <p class="mt-2 text-base text-stone-600 dark:text-stone-400 font-body">Witness divine forms and stories
@@ -151,7 +151,7 @@
               </div>
             </div>
             <div class="bg-white dark:bg-secondary rounded-xl shadow-lg overflow-hidden group">
-              <div class="h-64 bg-cover bg-center" style="background-image: url('paintings.jpg');"></div>
+              <div class="h-64 bg-cover bg-center" style="background-image: url('Images/paintings.jpg');"></div>
               <div class="p-6">
                 <h4 class="text-xl font-bold font-display text-stone-900 dark:text-white">Paintings</h4>
                 <p class="mt-2 text-base text-stone-600 dark:text-stone-400 font-body">Explore vibrant narratives from
@@ -162,7 +162,7 @@
               </div>
             </div>
             <div class="bg-white dark:bg-secondary rounded-xl shadow-lg overflow-hidden group">
-              <div class="h-64 bg-cover bg-center" style="background-image: url('textile.jpg');"></div>
+              <div class="h-64 bg-cover bg-center" style="background-image: url('Images/textile.jpg');"></div>
               <div class="p-6">
                 <h4 class="text-xl font-bold font-display text-stone-900 dark:text-white">Textiles</h4>
                 <p class="mt-2 text-base text-stone-600 dark:text-stone-400 font-body">Discover the intricate threads of
@@ -173,7 +173,7 @@
               </div>
             </div>
             <div class="bg-white dark:bg-secondary rounded-xl shadow-lg overflow-hidden group">
-              <div class="h-64 bg-cover bg-center" style="background-image: url('folkart.jpg');"></div>
+              <div class="h-64 bg-cover bg-center" style="background-image: url('Images/folkart.jpg');"></div>
               <div class="p-6">
                 <h4 class="text-xl font-bold font-display text-stone-900 dark:text-white">Folk Art</h4>
                 <p class="mt-2 text-base text-stone-600 dark:text-stone-400 font-body">Celebrate the raw, vibrant soul
@@ -195,7 +195,7 @@
           <div class="mt-12 grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-12 items-center">
             <div class="overflow-hidden rounded-xl shadow-lg">
               <img alt="The Great Stupa at Sanchi" class="w-full h-auto object-cover"
-                src="Great-Stupa-Sanchi-India.webp" />
+                src="Images/Great-Stupa-Sanchi-India.webp" />
             </div>
             <div class="text-left">
               <h4 class="text-2xl lg:text-3xl font-bold font-display text-stone-900 dark:text-white">The Great Stupa at
