--- a/stories.html
+++ b/stories.html
@@ -42,14 +42,14 @@
 <div class="container mx-auto px-4 sm:px-6 lg:px-8">
 <div class="flex items-center justify-between h-20 border-b border-primary/20 dark:border-primary/30">
 <div class="flex items-center gap-3">
-<img src="Logo.png" alt="Description" class="h-14 w-14" />
+<img src="Images/Logo.png" alt="Description" class="h-14 w-14" />
 <path clip-rule="evenodd" d="M24 18.4228L42 11.475V34.3663C42 34.7796 41.7457 35.1504 41.3601 35.2992L24 42V18.4228Z" fill="currentColor" fill-rule="evenodd"></path>
 <path clip-rule="evenodd" d="M24 8.18819L33.4123 11.574L24 15.2071L14.5877 11.574L24 8.18819ZM9 15.8487L21 20.4805V37.6263L9 32.9945V15.8487ZM27 37.6263V20.4805L39 15.8487V32.9945L27 37.6263ZM25.354 2.29885C24.4788 1.98402 23.5212 1.98402 22.646 2.29885L4.98454 8.65208C3.7939 9.08038 3 10.2097 3 11.475V34.3663C3 36.0196 4.01719 37.5026 5.55962 38.098L22.9197 44.7987C23.6149 45.0671 24.3851 45.0671 25.0803 44.7987L42.4404 38.098C43.9828 37.5026 45 36.0196 45 34.3663V11.475C45 10.2097 44.2061 9.08038 43.0155 8.65208L25.354 2.29885Z" fill="currentColor" fill-rule="evenodd"></path>
 </svg>
 <h1 class="text-2xl font-bold text-stone-900 dark:text-white">Dharohar</h1>
 </div>
 <nav class="hidden md:flex items-center gap-8">
-<a class="text-base font-medium hover:text-primary transition-colors" href="home.html">Home</a>
+<a class="text-base font-medium hover:text-primary transition-colors" href="index.html">Home</a>
 <a class="text-base font-medium hover:text-primary transition-colors" href="museumpage.html">Museum</a>
 <a class="text-base font-medium hover:text-primary transition-colors" href="map.html">Map</a>
 <a class="text-base font-medium text-primary transition-colors" href="stories.html">Stories</a>
@@ -80,7 +80,7 @@
 <div class="flex overflow-x-auto snap-x snap-mandatory scroll-smooth pb-8 -mb-8">
 <div class="snap-center shrink-0 w-full md:w-1/2 lg:w-1/3 p-4">
 <div class="group relative overflow-hidden rounded-xl h-[400px]">
-<div class="absolute inset-0 bg-cover bg-center rounded-xl group-hover:scale-105 transition-transform duration-500" style="background-image: url('diwali.webp');"></div>
+<div class="absolute inset-0 bg-cover bg-center rounded-xl group-hover:scale-105 transition-transform duration-500" style="background-image: url('Images/diwali.webp');"></div>
 <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
 <div class="absolute bottom-0 left-0 p-6 text-white">
 <h4 class="text-2xl font-bold">Diwali</h4>
@@ -90,7 +90,7 @@
 </div>
 <div class="snap-center shrink-0 w-full md:w-1/2 lg:w-1/3 p-4">
 <div class="group relative overflow-hidden rounded-xl h-[400px]">
-<div class="absolute inset-0 bg-cover bg-center rounded-xl group-hover:scale-105 transition-transform duration-500" style="background-image: url('holi.webp');"></div>
+<div class="absolute inset-0 bg-cover bg-center rounded-xl group-hover:scale-105 transition-transform duration-500" style="background-image: url('Images/holi.webp');"></div>
 <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
 <div class="absolute bottom-0 left-0 p-6 text-white">
 <h4 class="text-2xl font-bold">Holi</h4>
@@ -100,7 +100,7 @@
 </div>
 <div class="snap-center shrink-0 w-full md:w-1/2 lg:w-1/3 p-4">
 <div class="group relative overflow-hidden rounded-xl h-[400px]">
-<div class="absolute inset-0 bg-cover bg-center rounded-xl group-hover:scale-105 transition-transform duration-500" style="background-image: url('durgapooja.webp');"></div>
+<div class="absolute inset-0 bg-cover bg-center rounded-xl group-hover:scale-105 transition-transform duration-500" style="background-image: url('Images/durgapooja.webp');"></div>
 <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
 <div class="absolute bottom-0 left-0 p-6 text-white">
 <h4 class="text-2xl font-bold">Durga Puja</h4>
@@ -117,7 +117,7 @@
 <h3 class="text-3xl md:text-4xl font-bold text-center mb-12 text-stone-900 dark:text-white">Trending Stories</h3>
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
 <div class="group col-span-1 md:col-span-2 lg:col-span-2 relative overflow-hidden rounded-xl h-[400px]">
-<img alt="Mahabharata" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="mahabharat.jpg"/>
+<img alt="Mahabharata" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="Images/mahabharat.jpg"/>
 <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent"></div>
 <div class="absolute bottom-0 left-0 p-6 text-white">
 <div class="flex items-center gap-2 mb-2">
@@ -130,7 +130,7 @@
 </div>
 <div class="group bg-background-light dark:bg-background-dark p-6 rounded-xl border border-primary/20 dark:border-primary/30 flex flex-col gap-4">
 <div class="w-full h-48 rounded-lg overflow-hidden">
-<img alt="The story of Birbal" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="akbarbirbal.jpg"/>
+<img alt="The story of Birbal" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="Images/akbarbirbal.jpg"/>
 </div>
 <h4 class="text-xl font-bold text-stone-900 dark:text-white">Akbar &amp; Birbal</h4>
 <p class="text-base text-stone-600 dark:text-stone-400 flex-grow">Witty tales of the Mughal emperor and his clever minister.</p>
@@ -140,7 +140,7 @@
 </div>
 <div class="group bg-background-light dark:bg-background-dark p-6 rounded-xl border border-primary/20 dark:border-primary/30 flex flex-col gap-4">
 <div class="w-full h-48 rounded-lg overflow-hidden">
-<img alt="Vikram and Betal" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="vikrambetal.jpg"/>
+<img alt="Vikram and Betal" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="Images/vikrambetal.jpg"/>
 </div>
 <h4 class="text-xl font-bold text-stone-900 dark:text-white">Vikram and Betal</h4>
 <p class="text-base text-stone-600 dark:text-stone-400 flex-grow">Intriguing stories filled with riddles and moral dilemmas.</p>
@@ -191,7 +191,7 @@
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
 <div class="group bg-background-light dark:bg-background-dark p-6 rounded-xl border border-primary/20 dark:border-primary/30 flex flex-col gap-4">
 <div class="w-full h-48 rounded-lg overflow-hidden">
-<img alt="Ramayana Epic" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="epicoframayan.jpg"/>
+<img alt="Ramayana Epic" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="Images/epicoframayan.jpg"/>
 </div>
 <h4 class="text-xl font-bold text-stone-900 dark:text-white">The Epic of Ramayana</h4>
 <p class="text-base text-stone-600 dark:text-stone-400 flex-grow">The timeless tale of Rama, Sita, and the triumph of good over evil.</p>
@@ -213,7 +213,7 @@
 </div>
 <div class="group bg-background-light dark:bg-background-dark p-6 rounded-xl border border-primary/20 dark:border-primary/30 flex flex-col gap-4">
 <div class="w-full h-48 rounded-lg overflow-hidden">
-<img alt="Krishna and Radha" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="talesofkrishna.jpg"/>
+<img alt="Krishna and Radha" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="Images/talesofkrishna.jpg"/>
 </div>
 <h4 class="text-xl font-bold text-stone-900 dark:text-white">Tales of Krishna</h4>
 <p class="text-base text-stone-600 dark:text-stone-400 flex-grow">Stories of the mischievous and divine Krishna, from his childhood to his divine love.</p>
@@ -235,7 +235,7 @@
 </div>
 <div class="group bg-background-light dark:bg-background-dark p-6 rounded-xl border border-primary/20 dark:border-primary/30 flex flex-col gap-4">
 <div class="w-full h-48 rounded-lg overflow-hidden">
-<img alt="Panchatantra" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="Panchatantra.png"/>
+<img alt="Panchatantra" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" src="Images/Panchatantra.png"/>
 </div>
 <h4 class="text-xl font-bold text-stone-900 dark:text-white">Panchatantra Fables</h4>
 <p class="text-base text-stone-600 dark:text-stone-400 flex-grow">Ancient animal fables that teach valuable life lessons through witty storytelling.</p>
